--- a/protfolio/index.html
+++ b/protfolio/index.html
@@ -122,10 +122,9 @@
       height: 200px; 
       transition: transform 0.3s ease, background 0.3s ease;
     }
-
     .project-gradient:hover {
       transform: scale(1.05);
-      background: linear-gradient(135deg, #4e54c8, #8f94fb); /* New gradient on hover */
+      background: linear-gradient(135deg, #4e54c8, #8f94fb);
     }
     footer {
       background: #212529;
@@ -269,6 +268,5 @@
     const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
     const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
   </script>
-
 </body>
 </html>
