--- a/protfolio/index.html
+++ b/protfolio/index.html
@@ -32,7 +32,7 @@
     .navbar-toggler-icon {
       background-color: #fff;
     }
-    .hero {
+    .top {
       background: #f8f9fa;
       padding: 60px 20px;
       text-align: center;
@@ -159,7 +159,7 @@
       </div>
     </div>
   </nav>
-  <div class="hero">
+  <div class="top">
     <h1>Welcome to My Portfolio</h1>
     <p>Hi! I'm Harsh Patil<br>Second year INFT student at VESIT</p>
   </div>
@@ -263,10 +263,5 @@
   <footer>
     <p>&copy; 2024 Harsh Patil. All rights reserved.</p>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
-    const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
-  </script>
 </body>
 </html>
